Fix overlapping of the TM widget (again). 80 + 21.5 = 101.5 -- 80 + 20 = 100.
Closes bug 958.

svn path=/src/trunk/Pootle/; revision=12568

--- a/html/style.css
+++ b/html/style.css
@@ -1323,7 +1323,7 @@ textarea.comments
     margin-right: 0px;
     padding-bottom: 10px;
     border-bottom: 1px dotted #999;
-    width: 21.5%;
+    width: 20%;
     /* ltr: */
     right: 0px;
     border-left: 1px dotted #999;
